--- a/app/formation/opened/opened.html
+++ b/app/formation/opened/opened.html
@@ -13,7 +13,7 @@
             <h1 ng-bind-html="post.title"></h1>
             <p><strong>Niveau : </strong>{{post.level}}</p>
             <p><strong>Durée : </strong>{{post.duree}}</p>
-            <button ui-sref="contact">Contacter l'atelier</button>
+            <button ng-click="app.go('contact')">Contacter l'atelier</button>
         </div>
     </section>
 </div>
