--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 	<body ng-controller="AppCtrl as app">
 
 		<div id="appContainer" class="textureBg">
-			<div class="logo" ui-sref="home">
+			<div class="logo" ng-click="app.go('home')">
 				<!-- ... -->
 			</div>
 
 			<menu class="mainMenu">
-				<tab ui-sref="atelier">{{ app.language === 'fr' ? 'atelier' : 'workshop' }}</tab>
-				<tab ui-sref="savoirfaire">{{ app.language === 'fr' ? 'savoir-faire' : 'expertise' }}</tab>
-				<tab ui-sref="galerie">{{ app.language === 'fr' ? 'réalisations' : 'our work' }}</tab>
-				<tab ui-sref="formation">{{ app.language === 'fr' ? 'transmission du savoir' : 'education' }}</tab>
-				<tab ui-sref="contact">contact</tab>
+				<tab ng-click="app.go('atelier')" state-ref="atelier">{{ app.language === 'fr' ? 'atelier' : 'workshop' }}</tab>
+				<tab ng-click="app.go('savoirfaire')" state-ref="savoirfaire">{{ app.language === 'fr' ? 'savoir-faire' : 'expertise' }}</tab>
+				<tab ng-click="app.go('galerie')" state-ref="galerie">{{ app.language === 'fr' ? 'réalisations' : 'our work' }}</tab>
+				<tab ng-click="app.go('formation')" state-ref="formation">{{ app.language === 'fr' ? 'transmission du savoir' : 'education' }}</tab>
+				<tab ng-click="app.go('contact')" state-ref="contact">contact</tab>
 			</menu>
 
 			<menu class="lang">
@@ -37,7 +37,7 @@
 				>en</tab>
 			</menu>
 			<!-- Main View -->
-			<div class="mainView" ui-view="main"></div>
+			<div class="mainView {{app.sectionAnimationType}}" ui-view="main"></div>
 
 			<div class="border top"></div>
 			<div class="border right"></div>
