fix home ui-sref -> app.go

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -15,22 +15,22 @@
 
         <section class="Chapiter">
 
-            <article ui-sref="atelier" class="Chapiter-item left stagger">
+            <article ng-click="app.go('atelier')" class="Chapiter-item left stagger">
                 <h2 class="Chapiter-item-title">l'Atelier</h2>
                 <span class="Chapiter-item-number">01</span>
             </article>
 
-            <article ui-sref="savoirfaire" class="Chapiter-item right stagger">
+            <article ng-click="app.go('savoirfaire')" class="Chapiter-item right stagger">
                 <h2 class="Chapiter-item-title">Savoir-Faire</h2>
                 <span class="Chapiter-item-number">02</span>
             </article>
 
-            <article ui-sref="galerie" class="Chapiter-item left stagger">
+            <article ng-click="app.go('galerie')" class="Chapiter-item left stagger">
                 <h2 class="Chapiter-item-title">Réalisations</h2>
                 <span class="Chapiter-item-number">03</span>
             </article>
 
-            <article ui-sref="formation" class="Chapiter-item right stagger">
+            <article ng-click="app.go('formation')" class="Chapiter-item right stagger">
                 <h2 class="Chapiter-item-title">Transmission du savoir</h2>
                 <span class="Chapiter-item-number">04</span>
             </article>
