add homepage anim + galerie binder +member page

--- a/app/atelier/atelier.html
+++ b/app/atelier/atelier.html
@@ -68,6 +68,6 @@
 
     <button class="clientsButton" ui-sref="atelier.clients">{{ app.language === 'fr' ? 'Nos Clients' : 'Our CLients' }}</button>
 
-    <div class="clientsView" ui-view="clients"></div>
+    <div class="sideView" ui-view="clients"></div>
 
 </div>
