--- a/app/atelier/clients/clients.html
+++ b/app/atelier/clients/clients.html
@@ -21,7 +21,7 @@
                         ng-repeat="(index, client) in clts.clientsDorure"
                     >
                         <h4>{{client.name}}</h4>
-                        <span>{{'0' + (index + 1)}}</span>
+                        <!-- <span>{{''0' + (index + 1)'}}</span> -->
                     </article>
                 </div>
             </section>
@@ -33,7 +33,7 @@
                         class="Formation-list-item"
                         ng-repeat="(index, client) in clts.clientsFormation"
                     >
-                        <span>{{'0' + (index + 1)}}</span>
+                        <!-- <span>{{''0' + (index + 1)'}}</span> -->
                         <h4>{{client.name}}</h4>
                     </article>
                 </div>
