--- a/app/contact/contact.html
+++ b/app/contact/contact.html
@@ -44,4 +44,8 @@
         <h4>Bus : <span>12 - 14 - 57</span></h4>
     </section>
 
+    <button class="membreButton" ui-sref="contact.membre">{{ app.language === 'fr' ? 'Membre de' : 'Member of' }}</button>
+
+    <div class="sideView" ui-view="membre"></div>
+
 </div>
