--- a/app/home/home.html
+++ b/app/home/home.html
@@ -35,7 +35,10 @@
                 <span class="Chapiter-item-number">04</span>
             </article>
 
+            <img src="./assets/images/logo_epv.png">
+
         </section>
+
 
     </main>
 
