--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 			<menu class="mainMenu">
 				<tab ng-click="app.go('atelier')" state-ref="atelier">{{ app.language === 'fr' ? 'atelier' : 'workshop' }}</tab>
-				<tab ng-click="app.go('savoirfaire')" state-ref="savoirfaire">{{ app.language === 'fr' ? 'savoir-faire' : 'expertise' }}</tab>
+				<tab ng-click="app.go('savoirfaire')" state-ref="savoirfaire">{{ app.language === 'fr' ? 'savoir-faire' : 'savoir-faire' }}</tab>
 				<tab ng-click="app.go('galerie')" state-ref="galerie">{{ app.language === 'fr' ? 'réalisations' : 'our work' }}</tab>
 				<tab ng-click="app.go('formation')" state-ref="formation">{{ app.language === 'fr' ? 'transmission du savoir' : 'education' }}</tab>
 				<tab ng-click="app.go('contact')" state-ref="contact">contact</tab>
