--- a/app/contact/contact.html
+++ b/app/contact/contact.html
@@ -33,15 +33,14 @@
 
     <section class="informations halfScreen stagger">
         <h1 class="name">Atelier La Feuille d'Or</h1>
-        <h2 class="address"> 7, rue de la Tour d'Auvergne - 75009 Paris</h2>
+        <h2 class="address"> 7, rue de La Tour d'Auvergne - 75009 Paris</h2>
         <h4>{{ app.language === 'fr' ? 'Téléphone' : 'Phone' }} : <span>+33 (0)1 42 82 17 36</span></h4>
         <h4>Email : <span>lafeuilledor@free.fr</span></h4>
         <h4>{{ app.language === 'fr' ? 'Horaires' : 'Opening time' }} : <span>{{ app.language === 'fr' ? 'Du mardi au vendredi' : 'Tuesday to Friday' }}</span>
         </h4>
         <h4><span>9h30 / 12h30 - 14h / 18h<span></h4>
-        <h4>Métro : <img src="./assets/images/metro2.png"><span class="metro2">Anvers</span></h4>
-        <h4><img src="./assets/images/metro7.png"> <span class="metro7">Cadet</span></h4>
-        <h4>Bus : <span>12 - 14 - 57</span></h4>
+        <h4>Métro : <img src="./assets/images/metro2.png"><span class="metro2">Anvers</span><img src="./assets/images/metro7.png"> <span class="metro7">Cadet</span><img src="./assets/images/metro12.png"> <span class="metro12">Notre-Dame-de-Lorette</span></h4>
+        <h4>Bus : <span>85 - 26 - 32 - 43</span></h4>
     </section>
 
 </div>
