--- a/app/savoirfaire/savoirfaire.html
+++ b/app/savoirfaire/savoirfaire.html
@@ -21,6 +21,7 @@
                         class="Left-list-item stagger"
                         ng-repeat="(index, savoir) in sf.savoirsLeft"
                         ng-click="sf.openRight(savoir.slug)"
+                        ng-style="sf.styleLeft"
                     >
                         <h4 ng-bind-html="savoir.title"></h4>
                         <span>{{'0' + (index + 1)}}</span>
