integration logo epv home

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -35,9 +35,8 @@
                 <span class="Chapiter-item-number">04</span>
             </article>
 
-            <img src="./assets/images/logo_epv.png">
-
         </section>
+            <a href="#" target="_BLANK"><img src="./assets/images/logo_epv.png"></a>
 
 
     </main>
