Change Expertise for Savoir-Faire

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -27,7 +27,7 @@
             </article>
 
             <article ng-click="app.go('savoirfaire')" class="Chapiter-item right stagger">
-                <h2 class="Chapiter-item-title">{{ app.language === 'fr' ? 'Savoir-Faire' : 'Expertise' }}</h2>
+                <h2 class="Chapiter-item-title">{{ app.language === 'fr' ? 'Savoir-Faire' : 'Savoir-Faire' }}</h2>
                 <span class="Chapiter-item-number">02</span>
             </article>
 
