--- a/app/contact/membre/membre.html
+++ b/app/contact/membre/membre.html
@@ -8,7 +8,7 @@
 
     <div class="membreCenter">
         <header>
-            <h1>{{ app.language === 'fr' ? 'Nous nous engageons' : 'we commit ourselves' }}</h1>
+            <h1>{{ app.language === 'fr' ? 'Nous nous engageons' : 'commitment' }}</h1>
             <zigouigoui data-color="#e6dcd1"></zigouigoui>
         </header>
 
