--- a/app/home/home.html
+++ b/app/home/home.html
@@ -14,6 +14,8 @@
 
     <main class="center" ng-if="false || animation.center">
 
+        <h1>Atelier La Feuille d'Or</h1>
+
         <header>
             <h1 class="stagger">{{ app.language === 'fr' ? 'Choisissez votre chapitre pour découvrir l\'histoire' : 'Choose your chapiter to discover the story' }}</h1>
             <zigouigoui class="stagger" data-color="#e6dcd1"></zigouigoui>
