add google analytics && google webmastertools

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -45,7 +45,7 @@
 
         </section>
 
-        <a class="stagger" href="#" target="_BLANK"><img src="./assets/images/logo_epv.png"></a>
+        <a class="stagger" href="#" target="_BLANK"><img class="logo-epv" src="./assets/images/logo_epv_long.jpg"></a>
 
 
     </main>
