--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta name="keywords" content="dorure sur cuir, doreur sur cuir, dorure reliure, reliure dorure artisanale, dorure restauration, dorure or, dorure, feuille d'or, doreur paris, doreur france, artisanat français, savoir faire français, dorure livre, ancien, dorure feuille or, livres anciens, restauration livres anciens, conservation livre, restauration archive, dorure technique, dorure moderne, dorure à chaud, dorure classique, dorure contemporaine, reliure pastiche, stage dorure, workshop dorure, atelier dorure, cours dorure, titre livre, titrage livre, formation dorure sur cuir, restauration livre ancien formation, conférences dorure sur cuir, photo dorure cuir, image dorure cuir, réalisation dorure livre, livre rare, doreur expérimenté, dorure technique, dorure courante, dorure contemporaine, expert doreur, reliure pastiche, imitation livre ancien">
 		<meta name="author" content="Pascale Thérond">
 		<meta name="viewport" content="width=device-width">
+		<meta name="google-site-verification" content="i3SF3FKuuLXoaPfR1RF_nxFlR7X86FVFEFNzY619fRM" />
 		<link href='bower_components/normalize.css/normalize.css' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 		<style>
@@ -69,7 +70,17 @@
 				<div class="border left"></div>
 				<a class="mentionsLegales" target="_blank" href="mentions-legales.html">mentions legales</a>
 			</div>
+
 		<!-- Lib -->
+		<script>
+		 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		 m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		 })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+		 ga('create', 'UA-64702951-1', 'auto');
+		 ga('send', 'pageview');
+		</script>
 		<script src="bower_components/countUp.js/countUp.js"></script>
 		<script src="bower_components/gsap/src/uncompressed/TweenMax.js"></script>
 		<script src="bower_components/angular/angular.js"></script>
