add to Mentions Legales the description of the team

--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -13,7 +13,10 @@
 
     <div class="container">
         <h2>Informations légales</h2>
-        <h3>1. Présentation du site.</h3>
+        <h3>1. Conception et réalisation.</h3>
+        <p>Le site de la société La Feuille d’Or a été conçu, développé et mis en ligne par <a href="https://fr.linkedin.com/in/coralieamable" target="_BLANK">Coralie Amable</a>, <a href="https://www.linkedin.com/in/joannadenis8" target="_BLANK">Joanna Denis</a>, <a href="https://fr.linkedin.com/pub/juliette-desbois/b3/8a7/a46" target="_BLANK">Juliette Desbois</a>, <a href="http://annabelleruiz.com/" target="_BLANK">Annabelle Ruiz</a>, <a href="http://www.gabrielvergnaud.com" target="_BLANK">Gabriel Vergnaud</a>,  dans le cadre d’un projet pédagogique de l’école <a href="http://www.hetic.net/" target="_BLANK">HETIC</a> : 27 bis, rue du Progrès - 93100 Montreuil.</p>
+
+        <h3>2. Présentation du site.</h3>
         <p>En vertu de l'article 6 de la loi n° 2004-575 du 21 juin 2004 pour la confiance dans l'économie numérique, il est précisé aux utilisateurs du site <a href="http://wwww.lafeuilledor.paris/" title="La Feuille d'Or - wwww.lafeuilledor.paris">wwww.lafeuilledor.paris</a>        l'identité des différents intervenants dans le cadre de sa réalisation et de son suivi :</p>
         <p>
             <strong>Propriétaire</strong> : La Feuille d'Or – SARL 44 592 778 00013 – 7 rue de La Tour d'Auvergne 75009 Paris
@@ -28,7 +31,7 @@
             <strong>Hébergeur</strong> : 1&1 Internet SARL – 7, place de la Gare , BP 70109 , 57201 Sarreguemines Cedex
             <br /> Crédits : les mentions légales ont été générées et offertes par Subdelirium <a target="_blank" href="http://www.subdelirium.com/agence-web/agence-web-cognac/" alt="agence web cognac">agence web Cognac</a></p>
 
-        <h3>2. Conditions générales d’utilisation du site et des services proposés.</h3>
+        <h3>3. Conditions générales d’utilisation du site et des services proposés.</h3>
         <p>L’utilisation du site <a href="http://wwww.lafeuilledor.paris/" title="La Feuille d'Or - wwww.lafeuilledor.paris">wwww.lafeuilledor.paris</a> implique l’acceptation pleine et entière des conditions générales d’utilisation ci-après décrites. Ces conditions
             d’utilisation sont susceptibles d’être modifiées ou complétées à tout moment, les utilisateurs du site <a href="http://wwww.lafeuilledor.paris/" title="La Feuille d'Or - wwww.lafeuilledor.paris">wwww.lafeuilledor.paris</a> sont donc invités à
             les consulter de manière régulière.</p>
@@ -36,29 +39,29 @@
             et heures de l’intervention.</p>
         <p>Le site <a href="http://wwww.lafeuilledor.paris/" title="La Feuille d'Or - wwww.lafeuilledor.paris">wwww.lafeuilledor.paris</a> est mis à jour régulièrement par Pascale Thérond. De la même façon, les mentions légales peuvent être modifiées à tout
             moment : elles s’imposent néanmoins à l’utilisateur qui est invité à s’y référer le plus souvent possible afin d’en prendre connaissance.</p>
-        <h3>3. Description des services fournis.</h3>
+        <h3>4. Description des services fournis.</h3>
         <p>Le site <a href="http://wwww.lafeuilledor.paris/" title="La Feuille d'Or - wwww.lafeuilledor.paris">wwww.lafeuilledor.paris</a> a pour objet de fournir une information concernant l’ensemble des activités de la société.</p>
         <p>La Feuille d'Or s’efforce de fournir sur le site <a href="http://wwww.lafeuilledor.paris/" title="La Feuille d'Or - wwww.lafeuilledor.paris">wwww.lafeuilledor.paris</a> des informations aussi précises que possible. Toutefois, il ne pourra être tenue
             responsable des omissions, des inexactitudes et des carences dans la mise à jour, qu’elles soient de son fait ou du fait des tiers partenaires qui lui fournissent ces informations.</p>
         <p>Tous les informations indiquées sur le site <a href="http://wwww.lafeuilledor.paris/" title="La Feuille d'Or - wwww.lafeuilledor.paris">wwww.lafeuilledor.paris</a> sont données à titre indicatif, et sont susceptibles d’évoluer. Par ailleurs, les renseignements
             figurant sur le site <a href="http://wwww.lafeuilledor.paris/" title="La Feuille d'Or - wwww.lafeuilledor.paris">wwww.lafeuilledor.paris</a> ne sont pas exhaustifs. Ils sont donnés sous réserve de modifications ayant été apportées depuis leur
             mise en ligne.</p>
-        <h3>4. Limitations contractuelles sur les données techniques.</h3>
+        <h3>5. Limitations contractuelles sur les données techniques.</h3>
         <p>Le site utilise la technologie JavaScript.</p>
         <p>Le site Internet ne pourra être tenu responsable de dommages matériels liés à l’utilisation du site. De plus, l’utilisateur du site s’engage à accéder au site en utilisant un matériel récent, ne contenant pas de virus et avec un navigateur de dernière
             génération mis-à-jour</p>
-        <h3>5. Propriété intellectuelle et contrefaçons.</h3>
+        <h3>6. Propriété intellectuelle et contrefaçons.</h3>
         <p>La Feuille d'Or est propriétaire des droits de propriété intellectuelle ou détient les droits d’usage sur tous les éléments accessibles sur le site, notamment les textes, images, graphismes, logo, icônes, sons, logiciels.</p>
         <p>Toute reproduction, représentation, modification, publication, adaptation de tout ou partie des éléments du site, quel que soit le moyen ou le procédé utilisé, est interdite, sauf autorisation écrite préalable de : La Feuille d'Or.</p>
         <p>Toute exploitation non autorisée du site ou de l’un quelconque des éléments qu’il contient sera considérée comme constitutive d’une contrefaçon et poursuivie conformément aux dispositions des articles L.335-2 et suivants du Code de Propriété Intellectuelle.</p>
-        <h3>6. Limitations de responsabilité.</h3>
+        <h3>7. Limitations de responsabilité.</h3>
         <p>La Feuille d'Or ne pourra être tenue responsable des dommages directs et indirects causés au matériel de l’utilisateur, lors de l’accès au site wwww.lafeuilledor.paris, et résultant soit de l’utilisation d’un matériel ne répondant pas aux spécifications
             indiquées au point 4, soit de l’apparition d’un bug ou d’une incompatibilité.</p>
         <p>La Feuille d'Or ne pourra également être tenue responsable des dommages indirects (tels par exemple qu’une perte de marché ou perte d’une chance) consécutifs à l’utilisation du site <a href="http://wwww.lafeuilledor.paris/" title="La Feuille d'Or - wwww.lafeuilledor.paris">wwww.lafeuilledor.paris</a>.</p>
         <p>Des espaces interactifs (possibilité de poser des questions dans l’espace contact) sont à la disposition des utilisateurs. La Feuille d'Or se réserve le droit de supprimer, sans mise en demeure préalable, tout contenu déposé dans cet espace qui contreviendrait
             à la législation applicable en France, en particulier aux dispositions relatives à la protection des données. Le cas échéant, La Feuille d'Or se réserve également la possibilité de mettre en cause la responsabilité civile et/ou pénale de l’utilisateur,
             notamment en cas de message à caractère raciste, injurieux, diffamant, ou pornographique, quel que soit le support utilisé (texte, photographie…).</p>
-        <h3>7. Gestion des données personnelles.</h3>
+        <h3>8. Gestion des données personnelles.</h3>
         <p>En France, les données personnelles sont notamment protégées par la loi n° 78-87 du 6 janvier 1978, la loi n° 2004-801 du 6 août 2004, l'article L. 226-13 du Code pénal et la Directive Européenne du 24 octobre 1995.</p>
         <p>A l'occasion de l'utilisation du site <a href="http://wwww.lafeuilledor.paris/" title="La Feuille d'Or - wwww.lafeuilledor.paris">wwww.lafeuilledor.paris</a>, peuvent êtres recueillies : l'URL des liens par l'intermédiaire desquels l'utilisateur a
             accédé au site <a href="http://wwww.lafeuilledor.paris/" title="La Feuille d'Or - wwww.lafeuilledor.paris">wwww.lafeuilledor.paris</a>, le fournisseur d'accès de l'utilisateur, l'adresse de protocole Internet (IP) de l'utilisateur.</p>
@@ -71,7 +74,7 @@
             et de modification des données vis à vis de l'utilisateur du site <a href="http://wwww.lafeuilledor.paris/" title="La Feuille d'Or - wwww.lafeuilledor.paris">wwww.lafeuilledor.paris</a>.</p>
         <p>Le site n'est pas déclaré à la CNIL car il ne recueille pas d'informations personnelles. .</p>
         <p>Les bases de données sont protégées par les dispositions de la loi du 1er juillet 1998 transposant la directive 96/9 du 11 mars 1996 relative à la protection juridique des bases de données.</p>
-        <h3>8. Liens hypertextes et cookies.</h3>
+        <h3>9. Liens hypertextes et cookies.</h3>
         <p>Le site <a href="http://wwww.lafeuilledor.paris/" title="La Feuille d'Or - wwww.lafeuilledor.paris">wwww.lafeuilledor.paris</a> contient un certain nombre de liens hypertextes vers d’autres sites, mis en place avec l’autorisation de La Feuille d'Or.
             Cependant, La Feuille d'Or n’a pas la possibilité de vérifier le contenu des sites ainsi visités, et n’assumera en conséquence aucune responsabilité de ce fait.</p>
         <p>La navigation sur le site <a href="http://wwww.lafeuilledor.paris/" title="La Feuille d'Or - wwww.lafeuilledor.paris">wwww.lafeuilledor.paris</a> est susceptible de provoquer l’installation de cookie(s) sur l’ordinateur de l’utilisateur. Un cookie
@@ -86,13 +89,13 @@
         <p>Sous Chrome : Cliquez en haut à droite du navigateur sur le pictogramme de menu (symbolisé par trois lignes horizontales). Sélectionnez Paramètres. Cliquez sur Afficher les paramètres avancés. Dans la section "Confidentialité", cliquez sur préférences.
             Dans l'onglet "Confidentialité", vous pouvez bloquer les cookies.</p>
 
-        <h3>9. Droit applicable et attribution de juridiction.</h3>
+        <h3>10. Droit applicable et attribution de juridiction.</h3>
         <p>Tout litige en relation avec l’utilisation du site <a href="http://wwww.lafeuilledor.paris/" title="La Feuille d'Or - wwww.lafeuilledor.paris">wwww.lafeuilledor.paris</a> est soumis au droit français. Il est fait attribution exclusive de juridiction
             aux tribunaux compétents de Paris.</p>
-        <h3>10. Les principales lois concernées.</h3>
+        <h3>11. Les principales lois concernées.</h3>
         <p>Loi n° 78-17 du 6 janvier 1978, notamment modifiée par la loi n° 2004-801 du 6 août 2004 relative à l'informatique, aux fichiers et aux libertés.</p>
         <p> Loi n° 2004-575 du 21 juin 2004 pour la confiance dans l'économie numérique.</p>
-        <h3>11. Lexique.</h3>
+        <h3>12. Lexique.</h3>
         <p>Utilisateur : Internaute se connectant, utilisant le site susnommé.</p>
         <p>Informations personnelles : « les informations qui permettent, sous quelque forme que ce soit, directement ou non, l'identification des personnes physiques auxquelles elles s'appliquent » (article 4 de la loi n° 78-17 du 6 janvier 1978).</p>
     </div>
