--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
 		<script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 		<script src="bower_components/angular-animate/angular-animate.js"></script>
 		<script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+		<!-- Config -->
+        <script src="common/config/httpPostFix.js"></script>
 		<!-- Services -->
         <script src="common/services/Api.js"></script>
 		<!-- Directives -->
@@ -113,6 +115,7 @@
 		<script src="app/savoirfaire/animations.js"></script>
 		<script src="app/formation/animations.js"></script>
 		<script src="app/galerie/animations.js"></script>
+		<script src="app/contact/animations.js"></script>
         <!-- Controllers -->
 		<script src="app/home/home.js"></script>
 		<script src="app/atelier/atelier.js"></script>
