add default image formations

--- a/app/formation/opened/opened.html
+++ b/app/formation/opened/opened.html
@@ -5,7 +5,7 @@
     <section class="Image">
         <img
             full-frame
-            ng-src="{{post.image.sizes.large}}" />
+            ng-src="{{post.image.sizes.large || 'assets/images/IMG_9636.jpg'}}" />
     </section>
 
     <section class="Details textureBg">
