fix traductions contact

--- a/app/contact/contact.html
+++ b/app/contact/contact.html
@@ -55,7 +55,7 @@
         class="MessageBox Success"
         ng-if="contact.sendMessageSuccess"
     >
-        <h1>{{ app.language === 'fr' ? 'Envoi réussit !' : 'Message sended!' }}</h1>
+        <h1>{{ app.language === 'fr' ? 'Envoi réussi !' : 'Message sent!' }}</h1>
     </section>
 
     <section
