--- a/app/mobile/mobile.html
+++ b/app/mobile/mobile.html
@@ -49,7 +49,7 @@
                 <h4>Email : </h4>
                 <p>lafeuilledor@free.fr</p>
 
-                <h4>{{ app.language === 'fr' ? 'Horaires' : 'Opening time' }} : </h4>
+                <h4>{{ app.language === 'fr' ? 'Horaires' : 'Opening hours' }} : </h4>
                 <p>{{ app.language === 'fr' ? 'Du mardi au vendredi' : 'Tuesday to Friday' }}</p>
                 <p>9h30 / 12h30 - 14h / 18h</p>
 
@@ -57,11 +57,12 @@
                 <p>
                     <span class="metro2"><img src="./assets/images/metro2.png"> Anvers</span>
                     <span class="metro7"><img src="./assets/images/metro7.png"> Cadet</span>
+                    <span class="metro12"><img src="./assets/images/metro12.png"> Notre-Dame-de-Lorette</span>
                 </p>
 
                 <h4>Bus : </h4>
                 <p>
-                    12 - 14 - 57
+                    85 - 26 - 32 - 43
                 </p>
             </div>
         </div>
