--- a/app/savoirfaire/savoir/savoir.html
+++ b/app/savoirfaire/savoir/savoir.html
@@ -16,7 +16,9 @@
             <h1 ng-bind-html="s.savoir.title"></h1>
             <h2 ng-bind-html="s.savoir.baseline"></h2>
             <p ng-bind-html="s.savoir.content"></p>
-            <button class="Details-content-contactButton btnSaumon" ng-click="app.go('galerie')">Réalisations</button>
+            <button class="Details-content-contactButton btnSaumon" ng-click="app.go('galerie')">
+              {{ app.language === 'fr' ? 'Réalisations' : 'see the work' }}
+            </button>
         </div>
     </section>
 
